--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -4,40 +4,21 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-lg-4">
-        <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
-        <div class="box-element product">
-            <h6><strong>Product</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="float: right;" >$20</h4>
-        </div>
-    </div>
-
-    <div class="col-lg-4">
-        <img class="thumbnail"  src="{% static 'images/placeholder.png' %}" alt="">
-        <div class="box-element product">
-            <h6><strong>Product</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="float: right;" >$20</h4>
-        </div>
-    </div>
-
-    <div class="col-lg-4">
-        <img class="thumbnail"  src="{% static 'images/placeholder.png' %}" alt="">
-        <div class="box-element product">
-            <h6><strong>Product</strong></h6>
-            <hr>
-            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-            <a class="btn btn-outline-success" href="#">View</a>
-            <h4 style="float: right;" >$20</h4>
-        </div>
-    </div>
-</div>
     
+    {% for product in products  %}
+    <div class="col-lg-4">
+        <img class="thumbnail" src="{{ product.imageURL }}" alt="">
+        <div class="box-element product">
+            <h6><strong>{{ product.name }}</strong></h6>
+            <hr>
+            <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+            <a class="btn btn-outline-success" href="#">View</a>
+            <h4 style="float: right;" ><strong>${{ product.price | floatformat:2 }}</strong></h4>
+        </div>
+    </div>
+        
+    {% endfor %}
+        
 {% endblock content %}
     
 
