--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -43,7 +43,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make payment</button>
+				<div id="paypal-button-container"></div>
+				<!-- <button id="make-payment">Make payment</button> -->
 			</div>
 			
 		</div>
@@ -68,9 +69,53 @@
 		</div>
 	</div>
 
+	<!-- Include the PayPal JavaScript SDK -->
+	<script src="https://www.paypal.com/sdk/js?client-id=Ae0UjKMk_qBydeyy48T4pGDPSeqyzl1dVzKR0MtUn_U7q9EldxnA4ZnkF3nv44xwoZgVe6G3aVAmB76N&currency=USD&disable-funding=credit"></script>
+
+	<script>
+		var total = '{{order.get_cart_total}}'
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+			style:{
+				color:'gold',
+				shape:'rect',
+			},
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: parseFloat(total).toFixed(2)
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                    // Successful capture! For demo purposes:
+                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                    var transaction = orderData.purchase_units[0].payments.captures[0];
+                    submitFormData()
+
+                    // Replace the above to show a success message within this page, e.g.
+                    // const element = document.getElementById('paypal-button-container');
+                    // element.innerHTML = '';
+                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                    // Or go to another URL:  actions.redirect('thank_you.html');
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+    </script>
+
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
-		var total = '{{order.get_cart_total|floatformat:2}}'
+		
 
 		if (shipping == 'False'){
 		 	document.getElementById('shipping-info').innerHTML = ''
@@ -95,9 +140,9 @@
 	    	document.getElementById('payment-info').classList.remove("hidden");
 	    })
 
-	    document.getElementById('make-payment').addEventListener('click', function(e){
-	    	submitFormData()
-	    })
+	    // document.getElementById('make-payment').addEventListener('click', function(e){
+	    // 	submitFormData()
+	    // })
 
 	    function submitFormData(){
 	    	console.log('Payment button clicked')
